src/Skia/Bindings/Sk_typeface.hs


@
void sk_fontmgr_get_family_name(sk_fontmgr_t *, int index, sk_string_t *familyName)
@
-}
foreign import ccall "sk_fontmgr_get_family_name" sk_fontmgr_get_family_name ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> CInt -- ^ C argument @"int index"@
  -> Ptr (Sk_string) -- ^ C argument @"sk_string_t * familyName"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_fontmgr_get_family_name'
foreign import ccall "&sk_fontmgr_get_family_name" p'sk_fontmgr_get_family_name ::
  FunPtr (Ptr (Sk_fontmgr) -> CInt -> Ptr (Sk_string) -> IO (()))

{- | C function signature:

@
sk_fontstyleset_t *sk_fontmgr_create_styleset(sk_fontmgr_t *, int index)
@
-}
foreign import ccall "sk_fontmgr_create_styleset" sk_fontmgr_create_styleset ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> CInt -- ^ C argument @"int index"@
  -> IO (Ptr (Sk_fontstyleset)) -- ^ C return type: @"sk_fontstyleset_t *"@

-- | Function pointer to 'sk_fontmgr_create_styleset'
foreign import ccall "&sk_fontmgr_create_styleset" p'sk_fontmgr_create_styleset ::
  FunPtr (Ptr (Sk_fontmgr) -> CInt -> IO (Ptr (Sk_fontstyleset)))

{- | C function signature:

@
sk_fontstyleset_t *sk_fontmgr_match_family(sk_fontmgr_t *, const char *familyName)
@
-}
foreign import ccall "sk_fontmgr_match_family" sk_fontmgr_match_family ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> Ptr (CChar) -- ^ C argument @"const char * familyName"@
  -> IO (Ptr (Sk_fontstyleset)) -- ^ C return type: @"sk_fontstyleset_t *"@

-- | Function pointer to 'sk_fontmgr_match_family'
foreign import ccall "&sk_fontmgr_match_family" p'sk_fontmgr_match_family ::
  FunPtr (Ptr (Sk_fontmgr) -> Ptr (CChar) -> IO (Ptr (Sk_fontstyleset)))

{- | C function signature:

@
sk_typeface_t *sk_fontmgr_match_family_style(sk_fontmgr_t *, const char *familyName, sk_fontstyle_t *style)
@
-}
foreign import ccall "sk_fontmgr_match_family_style" sk_fontmgr_match_family_style ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> Ptr (CChar) -- ^ C argument @"const char * familyName"@
  -> Ptr (Sk_fontstyle) -- ^ C argument @"sk_fontstyle_t * style"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_fontmgr_match_family_style'
foreign import ccall "&sk_fontmgr_match_family_style" p'sk_fontmgr_match_family_style ::
  FunPtr (Ptr (Sk_fontmgr) -> Ptr (CChar) -> Ptr (Sk_fontstyle) -> IO (Ptr (Sk_typeface)))

{- | C function signature:

@
sk_typeface_t *sk_fontmgr_match_family_style_character(sk_fontmgr_t *, const char *familyName, sk_fontstyle_t *style, const char **bcp47, int bcp47Count, int32_t character)
@
-}
foreign import ccall "sk_fontmgr_match_family_style_character" sk_fontmgr_match_family_style_character ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> Ptr (CChar) -- ^ C argument @"const char * familyName"@
  -> Ptr (Sk_fontstyle) -- ^ C argument @"sk_fontstyle_t * style"@
  -> Ptr (Ptr (CChar)) -- ^ C argument @"const char ** bcp47"@
  -> CInt -- ^ C argument @"int bcp47Count"@
  -> Int32 -- ^ C argument @"int32_t character"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_fontmgr_match_family_style_character'
foreign import ccall "&sk_fontmgr_match_family_style_character" p'sk_fontmgr_match_family_style_character ::
  FunPtr (Ptr (Sk_fontmgr) -> Ptr (CChar) -> Ptr (Sk_fontstyle) -> Ptr (Ptr (CChar)) -> CInt -> Int32 -> IO (Ptr (Sk_typeface)))

{- | C function signature:

@
sk_typeface_t *sk_fontmgr_create_from_data(sk_fontmgr_t *, sk_data_t *data, int index)
@
-}
foreign import ccall "sk_fontmgr_create_from_data" sk_fontmgr_create_from_data ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> Ptr (Sk_data) -- ^ C argument @"sk_data_t * data"@
  -> CInt -- ^ C argument @"int index"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_fontmgr_create_from_data'
foreign import ccall "&sk_fontmgr_create_from_data" p'sk_fontmgr_create_from_data ::
  FunPtr (Ptr (Sk_fontmgr) -> Ptr (Sk_data) -> CInt -> IO (Ptr (Sk_typeface)))

{- | C function signature:

@
sk_typeface_t *sk_fontmgr_create_from_stream(sk_fontmgr_t *, sk_stream_asset_t *stream, int index)
@
-}
foreign import ccall "sk_fontmgr_create_from_stream" sk_fontmgr_create_from_stream ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> Ptr (Sk_stream_asset) -- ^ C argument @"sk_stream_asset_t * stream"@
  -> CInt -- ^ C argument @"int index"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_fontmgr_create_from_stream'
foreign import ccall "&sk_fontmgr_create_from_stream" p'sk_fontmgr_create_from_stream ::
  FunPtr (Ptr (Sk_fontmgr) -> Ptr (Sk_stream_asset) -> CInt -> IO (Ptr (Sk_typeface)))

{- | C function signature:

@
sk_typeface_t *sk_fontmgr_create_from_file(sk_fontmgr_t *, const char *path, int index)
@
-}
foreign import ccall "sk_fontmgr_create_from_file" sk_fontmgr_create_from_file ::
  Ptr (Sk_fontmgr) -- ^ C argument type: @"sk_fontmgr_t *"@
  -> Ptr (CChar) -- ^ C argument @"const char * path"@
  -> CInt -- ^ C argument @"int index"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_fontmgr_create_from_file'
foreign import ccall "&sk_fontmgr_create_from_file" p'sk_fontmgr_create_from_file ::
  FunPtr (Ptr (Sk_fontmgr) -> Ptr (CChar) -> CInt -> IO (Ptr (Sk_typeface)))

{- | C function signature:

@
sk_fontstyle_t *sk_fontstyle_new(int weight, int width, sk_font_style_slant_t slant)
@
-}
foreign import ccall "sk_fontstyle_new" sk_fontstyle_new ::
  CInt -- ^ C argument @"int weight"@
  -> CInt -- ^ C argument @"int width"@
  -> Sk_font_style_slant -- ^ C argument @"sk_font_style_slant_t slant"@
  -> IO (Ptr (Sk_fontstyle)) -- ^ C return type: @"sk_fontstyle_t *"@

-- | Function pointer to 'sk_fontstyle_new'
foreign import ccall "&sk_fontstyle_new" p'sk_fontstyle_new ::
  FunPtr (CInt -> CInt -> Sk_font_style_slant -> IO (Ptr (Sk_fontstyle)))

{- | C function signature:

@
void sk_fontstyle_delete(sk_fontstyle_t *fs)
@
-}
foreign import ccall "sk_fontstyle_delete" sk_fontstyle_delete ::
  Ptr (Sk_fontstyle) -- ^ C argument @"sk_fontstyle_t * fs"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_fontstyle_delete'
foreign import ccall "&sk_fontstyle_delete" p'sk_fontstyle_delete ::
  FunPtr (Ptr (Sk_fontstyle) -> IO (()))

{- | C function signature:

@
int sk_fontstyle_get_weight(const sk_fontstyle_t *fs)
@
-}
foreign import ccall "sk_fontstyle_get_weight" sk_fontstyle_get_weight ::
  Ptr (Sk_fontstyle) -- ^ C argument @"const sk_fontstyle_t * fs"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'sk_fontstyle_get_weight'
foreign import ccall "&sk_fontstyle_get_weight" p'sk_fontstyle_get_weight ::
  FunPtr (Ptr (Sk_fontstyle) -> IO (CInt))

{- | C function signature:

@
int sk_fontstyle_get_width(const sk_fontstyle_t *fs)
@
-}
foreign import ccall "sk_fontstyle_get_width" sk_fontstyle_get_width ::
  Ptr (Sk_fontstyle) -- ^ C argument @"const sk_fontstyle_t * fs"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'sk_fontstyle_get_width'
foreign import ccall "&sk_fontstyle_get_width" p'sk_fontstyle_get_width ::
  FunPtr (Ptr (Sk_fontstyle) -> IO (CInt))

{- | C function signature:

@
sk_font_style_slant_t sk_fontstyle_get_slant(const sk_fontstyle_t *fs)
@
-}
foreign import ccall "sk_fontstyle_get_slant" sk_fontstyle_get_slant ::
  Ptr (Sk_fontstyle) -- ^ C argument @"const sk_fontstyle_t * fs"@
  -> IO (Sk_font_style_slant) -- ^ C return type: @"sk_font_style_slant_t"@

-- | Function pointer to 'sk_fontstyle_get_slant'
foreign import ccall "&sk_fontstyle_get_slant" p'sk_fontstyle_get_slant ::
  FunPtr (Ptr (Sk_fontstyle) -> IO (Sk_font_style_slant))

{- | C function signature:

@
sk_fontstyleset_t *sk_fontstyleset_create_empty(void)
@
-}
foreign import ccall "sk_fontstyleset_create_empty" sk_fontstyleset_create_empty ::
  IO (Ptr (Sk_fontstyleset)) -- ^ C return type: @"sk_fontstyleset_t *"@

-- | Function pointer to 'sk_fontstyleset_create_empty'
foreign import ccall "&sk_fontstyleset_create_empty" p'sk_fontstyleset_create_empty ::
  FunPtr (IO (Ptr (Sk_fontstyleset)))

{- | C function signature:

@
void sk_fontstyleset_unref(sk_fontstyleset_t *fss)
@
-}
foreign import ccall "sk_fontstyleset_unref" sk_fontstyleset_unref ::
  Ptr (Sk_fontstyleset) -- ^ C argument @"sk_fontstyleset_t * fss"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_fontstyleset_unref'
foreign import ccall "&sk_fontstyleset_unref" p'sk_fontstyleset_unref ::
  FunPtr (Ptr (Sk_fontstyleset) -> IO (()))

{- | C function signature:

@
int sk_fontstyleset_get_count(sk_fontstyleset_t *fss)
@
-}
foreign import ccall "sk_fontstyleset_get_count" sk_fontstyleset_get_count ::
  Ptr (Sk_fontstyleset) -- ^ C argument @"sk_fontstyleset_t * fss"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'sk_fontstyleset_get_count'
foreign import ccall "&sk_fontstyleset_get_count" p'sk_fontstyleset_get_count ::
  FunPtr (Ptr (Sk_fontstyleset) -> IO (CInt))

{- | C function signature:

@
void sk_fontstyleset_get_style(sk_fontstyleset_t *fss, int index, sk_fontstyle_t *fs, sk_string_t *style)
@
-}
foreign import ccall "sk_fontstyleset_get_style" sk_fontstyleset_get_style ::
  Ptr (Sk_fontstyleset) -- ^ C argument @"sk_fontstyleset_t * fss"@
  -> CInt -- ^ C argument @"int index"@
  -> Ptr (Sk_fontstyle) -- ^ C argument @"sk_fontstyle_t * fs"@
  -> Ptr (Sk_string) -- ^ C argument @"sk_string_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_fontstyleset_get_style'
foreign import ccall "&sk_fontstyleset_get_style" p'sk_fontstyleset_get_style ::
  FunPtr (Ptr (Sk_fontstyleset) -> CInt -> Ptr (Sk_fontstyle) -> Ptr (Sk_string) -> IO (()))

{- | C function signature:

@
sk_typeface_t *sk_fontstyleset_create_typeface(sk_fontstyleset_t *fss, int index)
@
-}
foreign import ccall "sk_fontstyleset_create_typeface" sk_fontstyleset_create_typeface ::
  Ptr (Sk_fontstyleset) -- ^ C argument @"sk_fontstyleset_t * fss"@
  -> CInt -- ^ C argument @"int index"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_fontstyleset_create_typeface'
foreign import ccall "&sk_fontstyleset_create_typeface" p'sk_fontstyleset_create_typeface ::
  FunPtr (Ptr (Sk_fontstyleset) -> CInt -> IO (Ptr (Sk_typeface)))

{- | C function signature:

@
sk_typeface_t *sk_fontstyleset_match_style(sk_fontstyleset_t *fss, sk_fontstyle_t *style)
@
-}
foreign import ccall "sk_fontstyleset_match_style" sk_fontstyleset_match_style ::
  Ptr (Sk_fontstyleset) -- ^ C argument @"sk_fontstyleset_t * fss"@
  -> Ptr (Sk_fontstyle) -- ^ C argument @"sk_fontstyle_t * style"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_fontstyleset_match_style'
foreign import ccall "&sk_fontstyleset_match_style" p'sk_fontstyleset_match_style ::
  FunPtr (Ptr (Sk_fontstyleset) -> Ptr (Sk_fontstyle) -> IO (Ptr (Sk_typeface)))
